@@ -49,6 +49,7 @@ import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * ServerGroupHandler
@@ -605,7 +606,7 @@ public class ServerGroupHandler extends BaseHandler {
         List<ConfigChannel> channels = configChannelLabels.stream()
             .map(l -> Optional.ofNullable(manager.lookupGlobalConfigChannel(loggedInUser, l))
                     .orElseThrow(() -> new NoSuchChannelException(l)))
-            .toList();
+            .collect(Collectors.toList());
 
         group.subscribeConfigChannels(channels, loggedInUser);
         return 1;
@@ -635,7 +636,7 @@ public class ServerGroupHandler extends BaseHandler {
         List<ConfigChannel> channels = configChannelLabels.stream()
             .map(l -> Optional.ofNullable(manager.lookupGlobalConfigChannel(loggedInUser, l))
                     .orElseThrow(() -> new NoSuchChannelException(l)))
-            .toList();
+            .collect(Collectors.toList());
 
         group.unsubscribeConfigChannels(channels, loggedInUser);
         return 1;
@@ -664,6 +665,6 @@ public class ServerGroupHandler extends BaseHandler {
 
         List<Formula> formulas = FormulaFactory.listFormulas();
         List<String> assigned = FormulaFactory.getFormulasByGroup(group);
-        return formulas.stream().filter(f -> assigned.contains(f.getName())).toList();
+        return formulas.stream().filter(f -> assigned.contains(f.getName())).collect(Collectors.toList());
     }
 }
