@@ -25,6 +25,7 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * API handler with multiple methods for unit testing
@@ -95,7 +96,7 @@ public class TestHandler extends BaseHandler {
      * @return the sorted list of longs
      */
     public List<Long> sortLongList(List<Long> myList) {
-        return myList.stream().sorted().toList();
+        return myList.stream().sorted().collect(Collectors.toList());
     }
 
     /**
@@ -104,7 +105,7 @@ public class TestHandler extends BaseHandler {
      * @return the sorted list of strings
      */
     public List<String> sortStringList(List<String> myList) {
-        return myList.stream().sorted().toList();
+        return myList.stream().sorted().collect(Collectors.toList());
     }
 
     /**
@@ -150,7 +151,7 @@ public class TestHandler extends BaseHandler {
      */
     @ReadOnly
     public List<Object> listOfMaps(List<Map<String, Object>> myList) {
-        return myList.stream().flatMap(m -> m.values().stream()).toList();
+        return myList.stream().flatMap(m -> m.values().stream()).collect(Collectors.toList());
     }
 
     /**
