@@ -91,6 +91,7 @@ import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import spark.ModelAndView;
 import spark.Request;
@@ -307,7 +308,7 @@ public class ImageBuildController {
             json.addProperty("id", s.getId());
             json.addProperty("name", s.getName());
             return json;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     /**
@@ -782,7 +783,7 @@ public class ImageBuildController {
     private static List<JsonObject> getImageInfoSummaryList(
             List<ImageOverview> imageInfos) {
         return imageInfos.stream().map(ImageBuildController::getImageInfoSummary)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
