@@ -22,6 +22,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * Data required to schedule an action (install/update/remove) on packages
@@ -76,7 +77,7 @@ public class PackageActionJson extends ScheduledRequestJson {
         return selectedPackages.stream()
                                .map(PackageListItem::parse)
                                .map(PackageListItem::getKeyMap)
-                               .toList();
+                               .collect(Collectors.toList());
 
     }
 }
